shells/browser/shared/view/styles.scss
/** @format */

//***********************************
//*********   VARIABLES   ***********
//***********************************


//***********************************
//**********   GENERAL   ************
//***********************************


.button {
  border-radius: 5px;
  border-color: gray;
  border-width: 3px;
}
.snapshot-nav button {
  margin-right: 12px;
}

#container {
  padding: 10px 0 0 10px;
}
.navigation {
  padding: 0 0 10px 0;
}
.tabs {
  margin-left: 10px;
}
button.button.is-small.is-link {
  margin-left: 10px;
}
.column {
  border-right: 1px solid #e4e0e0;
  height: 90vh;
}
.scrollable {
  overflow: scroll;
}


//***********************************
//**********    STORE    ************
//***********************************

.slider-textcolor {
  color: #060606;
  font-weight: bold;
  margin: 20px 0;
}

//***** MENU *****
.type {
  background: lightblue;
}

.menu-list {
  width: 100%;
  font-size: 10px;
}
.menu-list a {
  word-break: break-all;
}
.records {
  width: 100%;
  margin-left: 2em;
}

.records:first-child {
  margin-left: 0em;
  border-bottom: 1px grey solid;
}

//***** STORE DISPLAY *****
.display-box {
  border-radius: 5px;
  width: 100%;
  font-size: 10px;
}

.key {
  font-weight: bold;
  word-wrap: break-word;
}

.value {
  word-wrap: break-word;
}

.snapshots {
  padding: 0 10px;
}
.snapshot-nav {
  margin-top: 30px;
}
.input-range {
  margin: 35px 0px;
}
.tabs.is-toggle li.is-active a {
  background-color: #00d1b2;
  border-color: #00d1b2;
  color: #fff;
  z-index: 1;
}
.input-range__slider {
  appearance: none;
  background: #00d1b2;
  border: 1px solid #0bc3a8;
  border-radius: 100%;
  cursor: pointer;
  display: block;
  height: 1rem;
  margin-left: -0.5rem;
  margin-top: -0.65rem;
  outline: none;
  position: absolute;
  top: 50%;
  transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
  width: 1rem; }
  .input-range__slider:active {
    transform: scale(1.3); }
  .input-range__slider:focus {
    box-shadow: 0 0 0 5px rgba(63, 81, 181, 0.2); }
  .input-range--disabled .input-range__slider {
    background: #cccccc;
    border: 1px solid #cccccc;
    box-shadow: none;
    transform: none; }

.input-range__slider-container {
  transition: left 0.3s ease-out; }

.input-range__label {
  color: #aaaaaa;
  font-family: "Helvetica Neue", san-serif;
  font-size: 0.8rem;
  transform: translateZ(0);
  white-space: nowrap; }

.input-range__label--min,
.input-range__label--max {
  bottom: -1.4rem;
  position: absolute; }

.input-range__label--min {
  left: 0; }

.input-range__label--max {
  right: 0; }

.input-range__label--value {
  position: absolute;
  top: -1.8rem; }

.input-range__label-container {
  left: -50%;
  position: relative; }
  .input-range__label--max .input-range__label-container {
    left: 50%; }

.input-range__track {
  background: #eeeeee;
  border-radius: 0.3rem;
  cursor: pointer;
  display: block;
  height: 0.3rem;
  position: relative;
  transition: left 0.3s ease-out, width 0.3s ease-out; }
  .input-range--disabled .input-range__track {
    background: #eeeeee; }

.input-range__track--background {
  left: 0;
  margin-top: -0.15rem;
  position: absolute;
  right: 0;
  top: 50%; }

.input-range__track--active {
  background: #3f51b5; }

.input-range {
  height: 1rem;
  position: relative;
  width: 100%; }
.type {
  background: lightblue;
}

.menu-list {
  width: 100%;
}

.record-line {
  border-bottom: 1px grey solid;
}

.records {
  width: 100%;
  margin-left: 2em;
}

.records:first-child {
  margin-left: 0em;
}

@media screen and (max-width: 768px) {
  .column {
    height: auto;
  }
  .snapshots {
    align-items: center;
  }
  .snapshot-nav {
    margin-top: 0;
    width: 40%;
  }
  .input-range {
    height: 1rem;
    width: 75%;
  }
}

